correct image links

--- a/hbcb_style.css
+++ b/hbcb_style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .bg-footer {
-    background-image: url(books_b-w.jpg);
+    background-image: url(images/books_b-w.jpg);
     background-size: 100%;
     color: white;
 }
